--- a/src/Css/Mainpage/Chatsection/Chatbox.css
+++ b/src/Css/Mainpage/Chatsection/Chatbox.css
@@ -1,4 +1,6 @@
+
 :root {
+  
   --Main-font: "Inter", sans-serif;
   --chat-bg: #f7f7f7;
   --chat-self-bg: #b0aedd;
@@ -7,6 +9,42 @@
   --chat-timestamp-color: #1b1204;
   --chat-bubble-radius: 15px;
 }
+.Chatbox-main-layout{
+  
+  display: flex;
+  height: 100%;
+  width: 71%;
+   font-family: "Inter", sans-serif;
+}
+@keyframes slideInRightToLeft {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOutLeftToRight {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
+
+.Chatbox-main-layout.slide-in {
+  animation: slideInRightToLeft 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.Chatbox-main-layout.slide-out {
+  animation: slideOutLeftToRight 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 .Chatbox-content {
   display: flex;
@@ -26,6 +64,7 @@
   border-bottom: 1px solid var(--chat-border);
   text-align: center;
   font-weight: bold;
+  position: relative;
 }
 
 .Chatbox-body {
@@ -111,4 +150,36 @@
 
 .send-logo:hover {
   color: #ff9e01;
+}
+.back-logo{
+     display: none;
+    position: absolute;
+    left: 0.5em;
+    top: 0.5em;
+    cursor: pointer;
+    width: 1.5em;
+    height: 1.5em;
+}
+
+@media screen and (max-width: 768px) {
+  .Chatbox-content {
+    flex-direction: column;
+  }
+  
+  .Chatbox-header {
+    font-size: 1.2em;
+  }
+  
+  .Chatbox-input input {
+    font-size: 0.9em;
+  }
+  
+  .send-logo {
+    font-size: 1.2em;
+  }
+  
+  .back-logo{
+    display: block;
+  }
+
 }
